examples/test/testpolicy18185.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18185
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key29: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value34
          key48: value43
      podSelector:
        matchLabels:
          key12: value16
